Revert "chore: 채용공고 및 AI 종합평가 로직 수정"